etc/tests/fuzz/errors/type/lambda-arg-mismatch.nshape
shape type-lambda-arg-mismatch {
  family "compiler-errors/type"
  generator "error"
  features ["error", "type", "negative", "diagnostic"]
  template ny-compile-fail
  expect compile_fail

  expect_message "cannot assign string literal to int"
  source ny <<'NY'
use std.core

def f = fn(int x) int {
   x + 1
}

print(f("x"))
NY
}
